fix z-index select-list and fix price select on js

--- a/src/scss/base/forms/select.scss
+++ b/src/scss/base/forms/select.scss
@@ -120,7 +120,7 @@
 
 	// Состояния селекта
 	&._select-open {
-		z-index: 5;
+		z-index: 3;
 	}
 	&._select-disabled {
 	}
